refactor InputController, handel "select none" for network chart